WebP animation: allow images to loop once

In crbug.com/592735 WebP was made to match GIF behavior, but as the loop
count is mandatory left it without a way to signal 1 repetition. This
restores the previous behavior.

BUG=649264

Change-Id: I4bc00c439af986c37fa44c65d67c9802d332e610
Reviewed-on: https://chromium-review.googlesource.com/668169
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: James Zern <jzern@google.com>
Cr-Commit-Position: refs/heads/master@{#503072}