third_party/WebKit/Source/platform/image-decoders/webp/WEBPImageDecoderTest.cpp
@@ -244,7 +244,7 @@ TEST(AnimatedWebPTests, parseAndDecodeByteByByte) {
                        kAnimationLoopInfinite);
   TestByteByByteDecode(
       &CreateWEBPDecoder,
-      "/LayoutTests/images/resources/webp-animated-icc-xmp.webp", 13u, 32000);
+      "/LayoutTests/images/resources/webp-animated-icc-xmp.webp", 13u, 31999);
 }
 
 TEST(AnimatedWebPTests, invalidImages) {
@@ -443,7 +443,7 @@ TEST(AnimatedWebPTests, isSizeAvailable) {
   TestByteByByteSizeAvailable(
       &CreateWEBPDecoder,
       "/LayoutTests/images/resources/webp-animated-icc-xmp.webp", 1404u, false,
-      32000);
+      31999);
 }
 
 TEST(AnimatedWEBPTests, clearCacheExceptFrameWithAncestors) {
